--- a/MutuallyExclusiveToggle/MutuallyExclusiveToggle/MainWindow.xaml
+++ b/MutuallyExclusiveToggle/MutuallyExclusiveToggle/MainWindow.xaml
@@ -1,12 +1,37 @@
 ﻿<Window x:Class="MutuallyExclusiveToggle.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:customControls="clr-namespace:MutuallyExclusiveToggle.Controls"
         xmlns:local="clr-namespace:MutuallyExclusiveToggle"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="TestWindow" Height="350" Width="525">
     <Grid>
-        
+        <TextBlock x:Name="CurrentStatusNofier"
+                   Height="24"
+                   Padding="0 3 0 0"
+                   VerticalAlignment="Top"
+                   HorizontalAlignment="Center"
+                   Foreground="Red">
+            <TextBlock.Style>
+                <Style TargetType="{x:Type TextBlock}">
+                    <Setter Property="Text"
+                            Value="Nothing selected" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding IdentifyOutputsActive}"
+                                     Value="True">
+                            <Setter Property="Text"
+                                    Value="Identify Outputs !" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding IdentifyScreensActive}"
+                                     Value="True">
+                            <Setter Property="Text"
+                                    Value="Identify Screens !" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </TextBlock.Style>
+        </TextBlock>
+
+        <customControls:CustomToggleButtonGroup HorizontalAlignment="Center"
+                                                VerticalAlignment="Center" />
     </Grid>
 </Window>
